--- a/Views/Time/List.cshtml
+++ b/Views/Time/List.cshtml
@@ -9,6 +9,7 @@
             </div>
         }
         <a asp-action="Export" class="btn btn-dark" style="width:fit-content; margin-left:10px"><span style="text-align:center">Export to CSV</span></a>
+        <a asp-action="Create" class="btn btn-primary createbtn" style="width:fit-content; margin-left:10px">Add Time</a>
         <table id="myTable" class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
