--- a/Views/Time/Create.cshtml
+++ b/Views/Time/Create.cshtml
@@ -23,6 +23,10 @@
                 <label asp-for="Date" class="form-label">Today's Date</label>
                 <input asp-for="Date" class="form-control" id="date" value="@DateTime.Today.Date.ToString("d")" />
             </div>
+            <div class="col-md-4">
+                <label asp-for="TaskNotes" class="form-label">Task Notes</label>
+                <textarea asp-for="TaskNotes" class="form-control" id="tasknotes" placeholder="Enter your task notes here"></textarea>
+            </div>
             <div class="col-md-4 pt-2">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
