--- a/Views/Time/Index.cshtml
+++ b/Views/Time/Index.cshtml
@@ -20,6 +20,7 @@
                     <th><h1>Clock Out</h1></th>
                     <th><h1>Date</h1></th>
                     <th><h1>Time Worked</h1></th>
+                    <th><h1>Task Notes</h1></th>
                     @if (User.IsInRole("Admin"))
                     {
                         <th><h1>Edit</h1></th>
@@ -47,6 +48,7 @@
                                 <td>@time.ClockOut</td>
                                 <td>@time.Date.ToString("d")</td>
                                 <td>@time.HoursWorked()</td>
+                                <td>@time.TaskNotes</td>
                                 @if (User.IsInRole("Admin"))
                                 {
                                     <td><a asp-action="Edit" asp-route-id="@time.Id" class="btn btn-primary">Edit</a></td>
