--- a/Views/Time/List.cshtml
+++ b/Views/Time/List.cshtml
@@ -18,6 +18,7 @@
                     <th><h1>Clock Out</h1></th>
                     <th><h1>Date</h1></th>
                     <th><h1>Time Worked</h1></th>
+                    <th><h1>Task Notes</h1></th>
                     <th><h1>Edit</h1></th>
                     <th><h1>Delete</h1></th>
                 </tr>
@@ -31,6 +32,7 @@
                         <td>@time.ClockOut</td>
                         <td>@time.Date.ToString("d")</td>
                         <td>@time.HoursWorked()</td>
+                        <td>@time.TaskNotes</td>
                         <td><a asp-action="Edit" asp-route-id="@time.Id" class="btn btn-primary">Edit</a></td>
                         <td><a asp-action="Delete" asp-route-id="@time.Id" class="btn btn-danger">Delete</a></td>
                     </tr>
