--- a/Views/Time/Edit.cshtml
+++ b/Views/Time/Edit.cshtml
@@ -7,8 +7,8 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" asp-for="Id" value="@Model.Id"/>
             <div class="col-md-4">
-                <label asp-for="UserId">Username</label>
-                <input asp-for="UserId" class="form-control" id="username" value="@Model.UserId" readonly/>
+                <label asp-for="UserEmail">Username</label>
+                <input asp-for="UserEmail" class="form-control" id="username" value="@Model.UserEmail" readonly/>
             </div>
             <div class="col-md-4">
                 <label asp-for="ClockIn">Clock In Time</label>
