--- a/Views/Time/List.cshtml
+++ b/Views/Time/List.cshtml
@@ -27,7 +27,7 @@
                 @foreach (var time in Model.Times)
                 {
                     <tr>
-                        <td>@time.UserId</td>
+                        <td>@time.UserEmail</td>
                         <td>@time.ClockIn</td>
                         <td>@time.ClockOut</td>
                         <td>@time.Date.ToString("d")</td>
