--- a/Views/Time/Export.cshtml
+++ b/Views/Time/Export.cshtml
@@ -5,7 +5,7 @@
     <div class="row">
         <form asp-action="ExportToCSV" method="post" role="form">
             <div class="col-md-4">
-                <label asp-for="UserId" class="form-label">Username</label>
+                <label asp-for="UserEmail" class="form-label">Username</label>
                 <input name="user" class="form-control" id="username" value="@User.Identity.Name"/>
             </div>
             <div class="col-md-4">
