--- a/Views/Time/List.cshtml
+++ b/Views/Time/List.cshtml
@@ -8,8 +8,11 @@
                 <h1>There are no times to display</h1>
             </div>
         }
-        <a asp-action="Export" class="btn btn-dark" style="width:fit-content; margin-left:10px"><span style="text-align:center">Export to CSV</span></a>
-        <a asp-action="Create" class="btn btn-primary createbtn" style="width:fit-content; margin-left:10px">Add Time</a>
+        <div class="pb-2">
+            <a asp-action="Export" class="btn btn-dark" style="width:fit-content; margin-left:10px"><span style="text-align:center">Export to CSV</span></a>
+            <a asp-action="Create" class="btn btn-primary createbtn" style="width:fit-content; margin-left:10px">Add Time</a>
+        </div>
+        
         <table id="myTable" class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
@@ -18,7 +21,6 @@
                     <th><h1>Clock Out</h1></th>
                     <th><h1>Date</h1></th>
                     <th><h1>Time Worked</h1></th>
-                    <th><h1>Task Notes</h1></th>
                     <th><h1>Edit</h1></th>
                     <th><h1>Delete</h1></th>
                 </tr>
@@ -32,7 +34,6 @@
                         <td>@time.ClockOut</td>
                         <td>@time.Date.ToString("d")</td>
                         <td>@time.HoursWorked()</td>
-                        <td>@time.TaskNotes</td>
                         <td><a asp-action="Edit" asp-route-id="@time.Id" class="btn btn-primary">Edit</a></td>
                         <td><a asp-action="Delete" asp-route-id="@time.Id" class="btn btn-danger">Delete</a></td>
                     </tr>
