added client crud operations

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TimeTest
 @using TimeTest.Models
+@using TimeTest.Models.Clients
 @using TimeTest.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
