--- a/Views/Time/Index.cshtml
+++ b/Views/Time/Index.cshtml
@@ -15,6 +15,7 @@
         <table class="table table-hover table-bordered table-striped " id="myTable">
             <thead>
                 <tr>
+                    <th><h1>Id</h1></th>
                     <th><h1>User</h1></th>
                     <th><h1>Clock In</h1></th>
                     <th><h1>Clock Out</h1></th>
@@ -42,6 +43,7 @@
                     {
                         <tbody>
                             <tr>
+                                <td><a asp-action="Details" asp-route-id="@time.Id" class="time-link">@time.Id</a></td>
                                 <td>@time.UserEmail</td>
                                 <td>@time.ClockIn</td>
                                 <td>@time.ClockOut</td>
