Styling for header and footer, added form css to export

--- a/Views/Time/Export.cshtml
+++ b/Views/Time/Export.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Time
 
-<div class="container panel-body">
+<div class="container panel-body main-form">
     <h2>Export Time</h2>
     <div class="row">
         <form asp-action="ExportToCSV" method="post" role="form">
