--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,8 +17,31 @@ html {
   min-height: 100%;
 }
 
+header {
+  background-color: #f8f9fa;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+}
+
+footer {
+  background-color: #f8f9fa;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.nav-link {
+    font-family: 'Roboto', sans-serif;
+}
+
+.navbar-brand {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
+}
+
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main-form {
