Added time block to client class, added client details view

--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -35,7 +35,7 @@
                 {
                     <tbody>
                         <tr>
-                            <td>@client.Name</td>
+                            <td><a asp-action="Details" asp-route-id="@client.Id">@client.Name</a></td>
                             <td>@client.Email</td>
                             <td>@client.Phone</td>
                             <td>@client.GetBillingAddress()</td>
