--- a/Views/Client/Details.cshtml
+++ b/Views/Client/Details.cshtml
@@ -12,8 +12,28 @@
             <p>@Model.Phone</p>
             <h4>Email Address</h4>
             <p>@Model.Email</p>
-            <h4 class="pt-2">Time Block</h4>
+        </div>
+        <div class="col-md-4">
+            <h4>Time Block</h4>
             <p>@Model.TimeBlock</p>
+            <h4>Add Time</h4>
+            <form asp-action="AddTime" method="post" role="form" class="form-body">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <input hidden asp-for="Id" value="@Model.Id"/>
+                <div class="form-group col-md-4">
+                    <select asp-for="TimeBlock" class="form-control" id="time">
+                        <option value="0">0</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                        <option value="20">20</option>
+                        <option value="30">30</option>
+                        <option value="50">50</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-4 pt-2">
+                    <button type="submit" class="btn btn-primary">Add Time</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
