--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -96,3 +96,14 @@ tr {
 #client {
     appearance: auto !important;
 }
+
+#time {
+    appearance: auto !important;
+}
+
+.header-buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-bottom: 10px;
+}
