--- a/Views/Client/Details.cshtml
+++ b/Views/Client/Details.cshtml
@@ -1,8 +1,18 @@
 ﻿@model Client
 
 <div class="container main-form col-md-8">
-    <div class="row text-decoration-underline">
-        <h2>@Model.Name Details</h2>
+    <div class="row header-row">
+        <div class="col-md-6 text-decoration-underline">
+            <h2>@Model.Name Details</h2>
+        </div>
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="col-md-6 header-buttons">
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+                <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+            </div>
+        }
+        
     </div>
     <div class="row pt-3">
         <div class="col-md-8">
@@ -16,24 +26,28 @@
         <div class="col-md-4">
             <h4>Time Block</h4>
             <p>@Model.TimeBlock</p>
-            <h4>Add Time</h4>
-            <form asp-action="AddTime" method="post" role="form" class="form-body">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <input hidden asp-for="Id" value="@Model.Id"/>
-                <div class="form-group col-md-4">
-                    <select asp-for="TimeBlock" class="form-control" id="time">
-                        <option value="0">0</option>
-                        <option value="10">10</option>
-                        <option value="15">15</option>
-                        <option value="20">20</option>
-                        <option value="30">30</option>
-                        <option value="50">50</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-4 pt-2">
-                    <button type="submit" class="btn btn-primary">Add Time</button>
-                </div>
-            </form>
+            @if (User.IsInRole("Admin"))
+            {
+                <h4>Add Time</h4>
+                <form asp-action="AddTime" method="post" role="form" class="form-body">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <input hidden asp-for="Id" value="@Model.Id"/>
+                    <div class="form-group col-md-4">
+                        <select asp-for="TimeBlock" class="form-control" id="time">
+                         <option value="0">0</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                            <option value="20">20</option>
+                            <option value="30">30</option>
+                            <option value="50">50</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-4 pt-2 text-nowrap">
+                        <button type="submit" class="btn btn-primary">Add Time</button>
+                    </div>
+                </form>  
+            }
+            
         </div>
     </div>
 </div>
