Timeblock time is returned when times are deleted

--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -9,7 +9,7 @@
                 <a asp-action="Create" class="btn btn-primary createbtn">Add Client</a>
             }
         </div>
-        <table class="table table-hover table-bordered table-striped " id="myTable">
+        <table class="table table-striped table-bordered table-hover" id="myTable">
             <thead>
                 <tr>
                     <th><h1>Name</h1></th>
