--- a/Views/Time/List.cshtml
+++ b/Views/Time/List.cshtml
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var time in Model.Times.OrderBy(t => t.Date))
+                @foreach (var time in Model.Times.OrderBy(t => t.UserEmail))
                 {
                     <tr>
                         <td>@time.UserEmail</td>
